--- a/bio.html
+++ b/bio.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaiser Cholo</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Saira+Condensed&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -42,7 +43,7 @@
         <hr class="dashed">
         <div>
         <p class="pBody">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras auctor lacus in nisi suscipit pellentesque. Praesent faucibus vulputate urna, vitae pellentesque nulla vestibulum id. Aliquam sit amet mauris lectus. Integer nisl sapien, placerat eu sodales fringilla, commodo bibendum lacus. Phasellus gravida urna sed mi ultrices, non dapibus risus aliquam. Praesent lobortis volutpat vehicula. Nullam id nulla ac tortor finibus placerat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec facilisis, mi vel scelerisque elementum, nisi nulla feugiat nisi, et luctus justo sapien eget felis. Aliquam ornare sapien a massa pulvinar varius. Quisque dictum quam ac nulla eleifend, at pulvinar eros pulvinar. Nunc feugiat, diam vitae euismod commodo, ex dui luctus risus, ut eleifend sem orci ac nisl. Maecenas auctor auctor ultricies. Praesent id porta risus, vitae efficitur risus. In non ultrices urna. Quisque sed nibh rhoncus, scelerisque tellus luctus, blandit quam.
+            Kaiser Cholo es una banda formada en 2015 
         </p>
     </div>
     <hr class="dashed">
