bootstrap sin js

--- a/bio.html
+++ b/bio.html
@@ -42,9 +42,57 @@
         </header>
         <hr class="dashed">
         <div>
-        <p class="pBody">
-            Kaiser Cholo es una banda formada en 2015 
-        </p>
+        <div class="container">
+            <div class="row align-items-center">
+                <p class="lead text-light">
+                    <em>
+                        -Equipó entonces a su hijo de la misma manera, y le enseñó cómo volar. Cuando ambos estuvieron preparados para volar, Dédalo advirtió a Ícaro que no volase demasiado alto porque el calor del sol derretiría la cera, ni demasiado bajo porque la espuma del mar mojaría las alas y no podría volar.-
+                    </em>
+                </p>
+            </div>
+            <div class="row align-items-center">
+                <div class="col">
+                    <img src="media/augusto_mastropablo.jpg" alt="Augusto Mastropablo" class="img-thumbnail w-50">
+                </div>
+                <div class="col">
+                    <p class="pBody">
+                        Después de su metamorfosis en 2014 manifestándose por Buenos Aires y alrededores, incluyendo un florecer en Chile, Kaiser Cholo decide detenerse en 2019 y renacer en 2020 dejando atrás el caos y la furia adolescente para darle lugar a una nueva faceta.
+                    </p>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col">
+                    <p class="pBody">
+                        Una emboscada en su regreso a casa lo asalta, bebiendo su vino, comiendo su pan, y condenándolo a olvidar su pasado merodeando cruces de caminos como aquel que lo hizo emerger.
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="media/emmanuel_antonelli.jpg" alt="Emmanuel Antonelli" class="img-thumbnail w-50">
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col">
+                    <img src="media/gaspix_tignanelli.jpg" alt="Gaspar Tignanelli" class="img-thumbnail w-50">
+                </div>
+                <div class="col">
+                    <p class="pBody">
+                        Desde entonces clama venganza ante ojos incrédulos que lo esquivan, tambaleándose entre los suyos que ya no lo reconocen, bufando sus nuevos himnos.
+                    </p>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col">
+                    <p class="pBody">
+                        El sol derretiría la cera, la espuma del mar mojaría las alas
+                    </p>
+                </div>
+                <div class="col">
+                    <img src="media/sansiniestro.jpg" alt="Sansiniestro" class="img-thumbnail w-50">
+                </div>
+
+            </div>
+        </div>
+        
     </div>
     <hr class="dashed">
     <footer>
